# hw3-sharonasyang

./: Makefile  README.md  ai_documentation.txt  myst.yml  pyproject.toml
ligotools/: __init__.py  utils.py
ligotools/tests/: test_readligo.py  test_utils.py
