[build-system]
requires = ["setuptools >= 70", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
  { name="Ligo Scientific Collaboration (LSC) and Sharona Yang", email="sharonasyang@berkeley.edu" },
]
description = "A Python library for LIGO scientific collaboration"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
    "decorator",
    "ipykernel",
    "IPython"
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["ligotools"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-sharonasyang"
Issues = "https://github.com/UCB-stat-159-f25/hw3-sharonasyang/issues"

[tool.setuptools]
packages = ["ligotools"]

[tool.setuptools.dynamic]
version = {attr = "ligotools.__version__"}